--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(RPGTextCPP)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(RPGTextCPP src/main.cpp)
+add_executable(RPGTextCPP src/main.cpp src/Player.cpp src/Player.h)
